--- a/.github/workflows/steam-box.yml
+++ b/.github/workflows/steam-box.yml
@@ -1,44 +1,44 @@
 name: Update steam playtime
 
 on:
+  workflow_dispatch:
   push:
     branches: [main]
   pull_request:
     branches: [main]
   schedule:
-    - cron: "0 0 * * *"
-  workflow_dispatch:
+    - cron: "0 0/8 * * *"
 
 jobs:
   build:
     name: Update-steam-playtime
     runs-on: ubuntu-latest
     env:
+      GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      GIST_ID: d45443c8d38dbc3be32af9e6504c9ef4
       STEAM_API_KEY: ${{ secrets.STEAM_API_KEY }}
       STEAM_ID: ${{ secrets.STEAM_ID }}
-      UPDATE_OPTION: MARKDOWN
+      UPDATE_OPTION: GIST_AND_MARKDOWN
       MARKDOWN_FILE: README.md
-      STEAM_OPTION: ALLTIME_AND_RECENT
 
     steps:
       - name: Set up Go 1.x
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v5
         with:
           go-version: ^1.14
         id: go
       - name: Check out repo
-        uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
+        uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
       - name: Clone and run steam-box
         run: |-
-          git clone https://github.com/torresflo/steam-box-for-readme.git
-          cd steam-box-for-readme && go build -o steam ./cmd/box/main.go
-          mv ./steam ../ && cd .. && rm -rf steam-box-for-readme/
+          git clone https://github.com/journey-ad/steam-box.git
+          cd steam-box && go build -o steam ./cmd/box/main.go
+          mv ./steam ../ && cd .. && rm -rf steam-box/
       - name: Commit and push
         run: |-
           ./steam
           git config --global user.email "bot@github.com" && git config --global user.name "Steam-Bot"
-          git config --global pull.rebase false
           git diff
-          git add README.md && git commit -m "Update Steam playtime" || exit 0
-          git pull && git push
+          git add README.md && git commit -m ":memo: update profile" || exit 0
+          git pull --rebase && git push
