--- a/.github/workflows/steam-box.yml
+++ b/.github/workflows/steam-box.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Commit and push
         run: |-
           ./steam
-          git config --global user.email "bot@github.com" && git config --global user.name "Steam-Bot" && git config --global pull.rebase true
+          git config --global user.email "github-actions[bot]@users.noreply.github.com" && git config --global user.name "github-actions[bot]" && git config --global pull.rebase true
           git diff
           git add README.md && git commit -m ":memo: update profile" || exit 0
           git pull && git push
