--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -1,8 +1,11 @@
 name: Metrics
 on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
   schedule:
-    - cron: "2 0 * * *"
-  workflow_dispatch:
+    - cron: '2 0 * * *'
 jobs:
   metrics:
     runs-on: ubuntu-latest
