--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -1,11 +1,13 @@
 name: Metrics
+
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
   schedule:
-    - cron: '2 0 * * *'
+    - cron: "2 0 * * *"
+  workflow_dispatch:
+  push:
+    branches:
+      - main
+
 jobs:
   metrics:
     runs-on: ubuntu-latest
