--- a/.github/workflows/steam-box.yml
+++ b/.github/workflows/steam-box.yml
@@ -1,12 +1,12 @@
 name: Update steam playtime
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
   schedule:
-    - cron: '2 * * * *'
+    - cron: "2 * * * *"
+  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
