--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   metrics:
     runs-on: ubuntu-latest
+    if: ${{ github.actor != 'NaiHeBot' }}
     steps:
       - uses: lowlighter/metrics@master
         with:
