--- a/.github/workflows/steam-box.yml
+++ b/.github/workflows/steam-box.yml
@@ -26,19 +26,48 @@ jobs:
         with:
           go-version: ^1.14
         id: go
-      - name: Check out repo
-        uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
+
+      - name: Checkout
+        uses: actions/checkout@v4.2.2
+        with:
+          token: ${{ secrets.NAIHEBOT_GITHUB_TOKEN }}
+
+      - name: Import GPG key for signing
+        uses: crazy-max/ghaction-import-gpg@v6.2.0
+        with:
+          gpg_private_key: ${{ secrets.NAIHEBOT_GPG_PRIVATE_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
+          git_config_global: true
+          git_user_signingkey: true
+          git_commit_gpgsign: true
+
+      - name: Validate Go
+        uses: actions/setup-go@v2
+
       - name: Clone and run steam-box
         run: |-
           git clone https://github.com/homurax/steam-box.git 
           cd steam-box && go build -o steam ./cmd/box/main.go
           mv ./steam ../ && cd .. && rm -rf steam-box/
 
-      - name: Commit and push
-        run: |-
+      - name: Run steam-box
+        shell: sh
+        run: |
           ./steam
-          git config --global user.email "github-actions[bot]@users.noreply.github.com" && git config --global user.name "github-actions[bot]" && git config --global pull.rebase true
-          git diff
-          git add README.md && git commit -m ":memo: update profile" || exit 0
-          git pull && git push
+
+      - name: Commit changes
+        shell: sh
+        run: |
+          set -eu
+
+          git add README.md
+
+          if ! git diff --cached --quiet; then
+              git commit -S -m "Update Profile(Steam)"
+          fi
+
+      - name: Push changes
+        uses: ad-m/github-push-action@v0.8.0
+        with:
+          github_token: ${{ secrets.NAIHEBOT_GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
