--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -43,14 +43,21 @@ jobs:
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
         env:
-          GITHUB_TOKEN: ${{ secrets.NAIHEBOT_GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        
+      - name: Commit changes
+        shell: sh
+        run: |
+          set -eu
 
-      # push the content of <build_dir> to a branch
-      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
-      - name: push github-contribution-grid-snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+          git add dist
+
+          if ! git diff --cached --quiet; then
+              git commit -S -m "Update Profile(Snake)"
+          fi
+
+      - name: Push changes
+        uses: ad-m/github-push-action@v0.8.0
         with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.NAIHEBOT_GITHUB_TOKEN }}
+          github_token: ${{ secrets.NAIHEBOT_GITHUB_TOKEN }}
+          branch: output
