--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -43,7 +43,7 @@ jobs:
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.NAIHEBOT_GITHUB_TOKEN }}
         
       - name: Commit changes
         shell: sh
