--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -3,7 +3,7 @@ name: generate animation
 on:
   # run automatically every 24 hours
   schedule:
-    - cron: "2 0 * * *"
+    - cron: "0 0 * * *"
 
   # allows to manually run the job at any time
   workflow_dispatch:
@@ -16,24 +16,9 @@ on:
 jobs:
   generate:
     runs-on: ubuntu-latest
-    if: ${{ github.actor != 'NaiHeBot' }}
     timeout-minutes: 10
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4.2.2
-        with:
-          token: ${{ secrets.NAIHEBOT_GITHUB_TOKEN }}
-
-      - name: Import GPG key for signing
-        uses: crazy-max/ghaction-import-gpg@v6.2.0
-        with:
-          gpg_private_key: ${{ secrets.NAIHEBOT_GPG_PRIVATE_KEY }}
-          passphrase: ${{ secrets.PASSPHRASE }}
-          git_config_global: true
-          git_user_signingkey: true
-          git_commit_gpgsign: true
-
       # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
       - name: generate github-contribution-grid-snake.svg
         uses: Platane/snk/svg-only@v3
@@ -43,22 +28,14 @@ jobs:
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
         env:
-          GITHUB_TOKEN: ${{ secrets.NAIHEBOT_GITHUB_TOKEN }}
-        
-      - name: Commit changes
-        shell: sh
-        run: |
-          set -eu
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-          git add dist/github-contribution-grid-snake-dark.svg
-          git add dist/github-contribution-grid-snake.svg
-
-          if ! git diff --cached --quiet; then
-              git commit -S -m "Update Profile(Snake)"
-          fi
-
-      - name: Push changes
-        uses: ad-m/github-push-action@v0.8.0
+      # push the content of <build_dir> to a branch
+      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
+      - name: push github-contribution-grid-snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
-          github_token: ${{ secrets.NAIHEBOT_GITHUB_TOKEN }}
-          branch: output
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
