--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -26,6 +26,7 @@ jobs:
           retries: 3
           retries_delay: 300
           use_prebuilt_image: yes
+          config_display: columns
           
           # Committer
           committer_token: ${{ secrets.NAIHEBOT_GITHUB_TOKEN }}
