--- a/.github/workflows/steam-box.yml
+++ b/.github/workflows/steam-box.yml
@@ -41,9 +41,9 @@ jobs:
       - name: Validate Go
         uses: actions/setup-go@v2
 
-      - name: Clone and run steam-box
-        run: |-
-          git clone https://github.com/homurax/steam-box.git 
+      - name: Clone and build steam-box
+        run: |
+          git clone https://github.com/YouEclipse/steam-box.git
           cd steam-box && go build -o steam ./cmd/box/main.go
           mv ./steam ../ && cd .. && rm -rf steam-box/
 
