--- a/.github/workflows/steam-box.yml
+++ b/.github/workflows/steam-box.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Clone and build steam-box
         run: |
-          git clone https://github.com/YouEclipse/steam-box.git
+          git clone https://github.com/naiheeeee/steam-box.git
           cd steam-box && go build -o steam ./cmd/box/main.go
           mv ./steam ../ && cd .. && rm -rf steam-box/
 
