--- a/.github/workflows/steam-box.yml
+++ b/.github/workflows/steam-box.yml
@@ -1,25 +1,22 @@
-name: Update steam playtime
-
+name: Update Steam Playtime
 on:
   schedule:
-    - cron: "2 * * * *"
+    - cron: "1 */2 * * *"
   workflow_dispatch:
-
 jobs:
   build:
-    name: Update-steam-playtime
-    runs-on: ubuntu-latest
+    name: Update-Steam-Playtime
     if: ${{ github.actor != 'NaiHeBot' }}
+    runs-on: ubuntu-latest
     env:
       GH_TOKEN: ${{ secrets.GH_TOKEN }}
       STEAM_API_KEY: ${{ secrets.STEAM_API_KEY }}
       STEAM_ID: ${{ secrets.STEAM_ID }}
       UPDATE_OPTION: MARKDOWN
       MARKDOWN_FILE: README.md
-
     steps:
       - name: Set up Go 1.x
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v5
         with:
           go-version: ^1.14
         id: go
@@ -30,7 +27,7 @@ jobs:
           token: ${{ secrets.NAIHEBOT_GITHUB_TOKEN }}
 
       - name: Import GPG key for signing
-        uses: crazy-max/ghaction-import-gpg@v6.3.0
+        uses: crazy-max/ghaction-import-gpg@v6.2.0
         with:
           gpg_private_key: ${{ secrets.NAIHEBOT_GPG_PRIVATE_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
@@ -39,11 +36,11 @@ jobs:
           git_commit_gpgsign: true
 
       - name: Validate Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v5
 
       - name: Clone and build steam-box
         run: |
-          git clone https://github.com/naiheeeee/steam-box.git
+          git clone https://github.com/NaiHeeeee/steam-box.git
           cd steam-box && go build -o steam ./cmd/box/main.go
           mv ./steam ../ && cd .. && rm -rf steam-box/
 
@@ -53,9 +50,15 @@ jobs:
           ./steam
 
       - name: Commit changes
+        shell: sh
         run: |
+          set -eu
+
           git add README.md
-          git commit -S -m "Update Profile(Steam)"
+
+          if ! git diff --cached --quiet; then
+              git commit -S -m "Update Profile(Steam)"
+          fi
 
       - name: Push changes
         uses: ad-m/github-push-action@v0.8.0
