--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -33,5 +33,6 @@ jobs:
         with:
           target_branch: output
           build_dir: dist
+          commit_message: ":memo: Update Profile (Snake)"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
