--- a/.github/workflows/steam-box.yml
+++ b/.github/workflows/steam-box.yml
@@ -26,10 +26,7 @@ jobs:
           go-version: ^1.14
         id: go
       - name: Check out repo
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.NAIHEBOT_GITHUB_TOKEN }}  # 使用协助者的个人访问令牌
-          persist-credentials: true
+        uses: actions/checkout@v2
       - uses: actions/setup-go@v2
       - name: Clone and run steam-box
         run: |-
@@ -39,9 +36,7 @@ jobs:
       - name: Commit and push
         run: |-
           ./steam
-          git config --global user.email "naiheee6@gmail.com"
-          git config --global user.name "naihebot"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com" && git config --global user.name "github-actions[bot]"
           git diff
-          git add README.md && git commit -m ":memo: update profile" || exit 0
-          git pull --rebase
-          git push "https://${{ secrets.NAIHEBOT_GITHUB_TOKEN }}@github.com/naiheeeee.git"
+          git add README.md && git commit -m ":memo: Update Profile (Steam)" || exit 0
+          git pull --rebase && git push
