--- a/.github/workflows/steam-box.yml
+++ b/.github/workflows/steam-box.yml
@@ -4,9 +4,9 @@ on:
   schedule:
     - cron: "2 0/2 * * *"
   workflow_dispatch:
-  push:
-    branches:
-      - main
+  # push:
+  #   branches:
+  #     - main
 
 jobs:
   build:
