--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -15,6 +15,11 @@ jobs:
     timeout-minutes: 10
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.NAIHEBOT_GITHUB_TOKEN }}
+
       # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
       - name: generate github-contribution-grid-snake.svg
         uses: Platane/snk/svg-only@v3
@@ -36,3 +41,4 @@ jobs:
           commit_message: ":memo: Update Profile (Snake)"
         env:
           GITHUB_TOKEN: ${{ secrets.NAIHEBOT_GITHUB_TOKEN }}
+          committer: "NaiHeBot <naiheeee6@gmail.com>"
