--- a/.github/workflows/anime_list.yml
+++ b/.github/workflows/anime_list.yml
@@ -17,7 +17,7 @@ jobs:
         uses: ycs77/readme-anime-list@main
         with:
           target: 'README.md'
-          template: 'README.md'
+          template: 'template/README-eta.md'
           bangumi_username: 'naihe6'
           bangumi_limit: 10
           user_agent: 'naiheeeee/naiheeeee README'
