更新 anime_list.yml

--- a/.github/workflows/anime_list.yml
+++ b/.github/workflows/anime_list.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   anime_list:
+    if: ${{ github.actor != 'NaiHeBot' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
