--- a/.github/workflows/anime_list.yml
+++ b/.github/workflows/anime_list.yml
@@ -10,7 +10,8 @@ jobs:
     if: ${{ github.actor != 'NaiHeBot' }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
           token: ${{ secrets.NAIHEBOT_GITHUB_TOKEN }}
 
