--- a/.github/workflows/summary_cards.yml
+++ b/.github/workflows/summary_cards.yml
@@ -1,4 +1,4 @@
-name: GitHub-Profile-Summary-Cards
+name: Update GitHub Profile Summary Cards
 
 on:
   schedule: # execute every 24 hours
@@ -23,7 +23,7 @@ jobs:
         env: # default use ${{ secrets.SUMMARY_GITHUB_TOKEN }}, you should replace with your personal access token
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
-          USERNAME: ${ github.repository_owner }
+          USERNAME: ${{ github.repository_owner }}
           # BRANCH_NAME is optional, default to main, branch name to push cards
           BRANCH_NAME: "main"
           # UTC_OFFSET is optional, default to zero
