--- a/.github/workflows/summary_cards.yml
+++ b/.github/workflows/summary_cards.yml
@@ -38,4 +38,4 @@ jobs:
           git config --global user.email "naiheeee6@gmail.com" && git config --global user.name "NaiHeBot"
           git diff
           git add profile-summary-card-output && git commit -m ":memo: Update Profile (Summary Cards)" || exit 0
-          git pull --rebase && git push
+          git pull --rebase origin profile-summary-card-output && git push origin HEAD:profile-summary-card-output
