--- a/.github/workflows/summary_cards.yml
+++ b/.github/workflows/summary_cards.yml
@@ -37,7 +37,9 @@ jobs:
         run: |-
           git config --global user.email "naiheeee6@gmail.com" && git config --global user.name "NaiHeBot"
           git diff
-          git add profile-summary-card-output && git commit -m ":memo: Update Profile (Summary Cards)" || exit 0
-          git branch --exists profile-summary-card-output || git checkout --orphan profile-summary-card-output
+          git add profile-summary-card-output
+          git commit -m ":memo: Update Profile (Summary Cards)" || exit 0
+          git fetch origin
+          git checkout -b profile-summary-card-output || git checkout profile-summary-card-output
           git pull --rebase origin profile-summary-card-output || true
-          git push origin HEAD:profile-summary-card-output
+          git push origin profile-summary-card-output
