--- a/.github/workflows/summary_cards.yml
+++ b/.github/workflows/summary_cards.yml
@@ -18,6 +18,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.NAIHEBOT_GITHUB_TOKEN }}
+          ref: profile-summary-card-output # checkout the branch to push cards
+          fetch-depth: 0 # fetch all history for all branches and tags
       - name: Generate GitHub Profile Summary Cards
         uses: vn7n24fzkq/github-profile-summary-cards@release
         env: # default use ${{ secrets.SUMMARY_GITHUB_TOKEN }}, you should replace with your personal access token
@@ -25,7 +27,7 @@ jobs:
         with:
           USERNAME: ${{ github.repository_owner }}
           # BRANCH_NAME is optional, default to main, branch name to push cards
-          BRANCH_NAME: "profile-summary-card-output"
+          BRANCH_NAME: profile-summary-card-output
           # UTC_OFFSET is optional, default to zero
           UTC_OFFSET: 8
           # EXCLUDE is an optional comma seperated list of languages to exclude, defaults to ""
