--- a/.github/workflows/summary_cards.yml
+++ b/.github/workflows/summary_cards.yml
@@ -33,4 +33,29 @@ jobs:
           # EXCLUDE is an optional comma seperated list of languages to exclude, defaults to ""
           EXCLUDE: ""
           # AUTO_PUSH is optional, a boolean variable default to true, whether automatically push generated files to desired branch
-          AUTO_PUSH: true
+          AUTO_PUSH: false
+
+      - name: Commit and push
+        run: |-
+          git config --global user.email "naiheeee6@gmail.com" && git config --global user.name "NaiHeBot"
+          # 创建临时目录
+          mkdir -p temp-branch
+          # 复制profile-summary-card-output中的内容到临时目录
+          cp -r profile-summary-card-output/* temp-branch/
+          # 获取当前分支
+          CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
+          # 创建并切换到新分支
+          git checkout -b profile-summary-card-output || git checkout profile-summary-card-output
+          # 删除分支中所有现有内容
+          git rm -rf .
+          # 移动临时目录中的内容到根目录
+          mv temp-branch/* .
+          # 清理临时目录
+          rm -rf temp-branch
+          # 添加和提交变更
+          git add .
+          git commit -m ":memo: Update Profile (Summary Cards)" || exit 0
+          # 推送分支
+          git push origin profile-summary-card-output --force
+          # 切回原分支
+          git checkout $CURRENT_BRANCH
