--- a/.github/workflows/summary_cards.yml
+++ b/.github/workflows/summary_cards.yml
@@ -18,8 +18,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.NAIHEBOT_GITHUB_TOKEN }}
-          ref: profile-summary-card-output # checkout the branch to push cards
-          fetch-depth: 0 # fetch all history for all branches and tags
       - name: Generate GitHub Profile Summary Cards
         uses: vn7n24fzkq/github-profile-summary-cards@release
         env: # default use ${{ secrets.SUMMARY_GITHUB_TOKEN }}, you should replace with your personal access token
@@ -27,7 +25,7 @@ jobs:
         with:
           USERNAME: ${{ github.repository_owner }}
           # BRANCH_NAME is optional, default to main, branch name to push cards
-          BRANCH_NAME: "profile-summary-card-output"
+          BRANCH_NAME: "main"
           # UTC_OFFSET is optional, default to zero
           UTC_OFFSET: 8
           # EXCLUDE is an optional comma seperated list of languages to exclude, defaults to ""
@@ -38,24 +36,6 @@ jobs:
       - name: Commit and push
         run: |-
           git config --global user.email "naiheeee6@gmail.com" && git config --global user.name "NaiHeBot"
-          # 创建临时目录
-          mkdir -p temp-branch
-          # 复制profile-summary-card-output中的内容到临时目录
-          cp -r profile-summary-card-output/* temp-branch/
-          # 获取当前分支
-          CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
-          # 创建并切换到新分支
-          git checkout -b profile-summary-card-output || git checkout profile-summary-card-output
-          # 删除分支中所有现有内容
-          git rm -rf .
-          # 移动临时目录中的内容到根目录
-          mv temp-branch/* .
-          # 清理临时目录
-          rm -rf temp-branch
-          # 添加和提交变更
-          git add .
-          git commit -m ":memo: Update Profile (Summary Cards)" || exit 0
-          # 推送分支
-          git push origin profile-summary-card-output --force
-          # 切回原分支
-          git checkout $CURRENT_BRANCH
+          git diff
+          git add profile-summary-card-output && git commit -m ":memo: Update Profile (Summary Cards)" || exit 0
+          git pull --rebase && git push
