--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -26,7 +26,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }} # optional if on profile readme
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_TOKEN }} # required
           ### meta
-          API_BASE_URL: https://api.wakatime.com/api/v1/ # optional
+          API_BASE_URL: https://wakatime.com/api # optional
           REPOSITORY: NaiHeeeee/NaiHeeeee # optional
           ### content
           # 标题
