--- a/.github/workflows/steam-box.yml
+++ b/.github/workflows/steam-box.yml
@@ -25,17 +25,29 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.NAIHEBOT_GITHUB_TOKEN }}
+      
       - name: Set up Go 1.x
         uses: actions/setup-go@v2
         with:
           go-version: ^1.14
         id: go
-      - uses: actions/setup-go@v2
+      
+      - name: Cache Go modules
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+      
       - name: Clone and run steam-box
         run: |-
           git clone https://github.com/naiheeeee/steam-box.git
           cd steam-box && go build -o steam ./cmd/box/main.go
           mv ./steam ../ && cd .. && rm -rf steam-box/
+      
       - name: Commit and push
         run: |-
           ./steam
