--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -2,7 +2,7 @@ name: Update Metrics
 
 on:
   schedule:
-    - cron: "2 0 * * *"
+    - cron: "0 20 * * *"
   workflow_dispatch:
 
 jobs:
@@ -43,9 +43,10 @@ jobs:
           # Language plugin
           plugin_languages: yes
           plugin_languages_skipped: unlock-music
-          plugin_languages_ignored: 'inno setup'
+          plugin_languages_ignored: >-
+            'inno setup', dockerfile, makefile, cmake, tex, qmake
           plugin_languages_details: bytes-size, percentage
-          plugin_languages_sections: most-used, recently-used
+          plugin_languages_sections: most-used, recently-used 
           
           # Followup plugin
           plugin_followup: yes
