--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -46,7 +46,7 @@ jobs:
           plugin_languages_ignored: >-
             'inno setup', dockerfile, makefile, cmake, tex, qmake
           plugin_languages_details: bytes-size, percentage
-          plugin_languages_sections: most-used, recently-used 
+          plugin_languages_sections: most-used
           
           # Followup plugin
           plugin_followup: yes
