--- a/.github/workflows/year_progress.yml
+++ b/.github/workflows/year_progress.yml
@@ -26,5 +26,7 @@ jobs:
         run: |-
           git config --global user.email "naiheeee6@gmail.com" && git config --global user.name "NaiHeBot"
           git diff
-          git add README.md && git commit -m ":memo: Update Profile (Year Progress)" || exit 0
-          git pull --rebase && git push
+          git add -A
+          git commit -m ":memo: Update Profile (Year Progress)" || echo "No changes to commit"
+          git pull --rebase
+          git push
