--- a/.github/workflows/anime_list.yml
+++ b/.github/workflows/anime_list.yml
@@ -29,5 +29,7 @@ jobs:
         run: |-
           git config --global user.email "naiheeee6@gmail.com" && git config --global user.name "NaiHeBot"
           git diff
-          git add README.md && git commit -m ":memo: Update Profile (Bangumi)" || exit 0
-          git pull --rebase && git push
+          git add -A
+          git commit -m ":memo: Update Profile (Anime List)" || echo "No changes to commit"
+          git pull --rebase
+          git push
