--- a/.github/workflows/steam-box.yml
+++ b/.github/workflows/steam-box.yml
@@ -50,8 +50,9 @@ jobs:
       
       - name: Commit and push
         run: |-
-          ./steam
           git config --global user.email "naiheeee6@gmail.com" && git config --global user.name "NaiHeBot"
           git diff
-          git add README.md template/README-eta.md && git commit -m ":memo: Update Profile (Steam)" || exit 0
-          git pull --rebase && git push
+          git add -A
+          git commit -m ":memo: Update Profile (Steam Box)" || echo "No changes to commit"
+          git pull --rebase
+          git push
