--- a/.github/workflows/summary_cards.yml
+++ b/.github/workflows/summary_cards.yml
@@ -37,5 +37,7 @@ jobs:
         run: |-
           git config --global user.email "naiheeee6@gmail.com" && git config --global user.name "NaiHeBot"
           git diff
-          git add profile-summary-card-output && git commit -m ":memo: Update Profile (Summary Cards)" || exit 0
-          git pull --rebase && git push
+          git add -A
+          git commit -m ":memo: Update Profile (Summary Cards)" || echo "No changes to commit"
+          git pull --rebase
+          git push
